--- a/HandyKeras/MainWindow.xaml
+++ b/HandyKeras/MainWindow.xaml
@@ -4,6 +4,7 @@
                            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                            xmlns:controls="clr-namespace:HandyControl.Controls;assembly=HandyControl"
+                           xmlns:userControl="clr-namespace:HandyKeras.UserControl"
                            mc:Ignorable="d"
                            BorderThickness="1"
                            BorderBrush="#262e2f"
@@ -14,10 +15,9 @@
                            Title="MainWindow" 
                            ResizeMode="CanResizeWithGrip"
                            Name="MyWindow"
+                           Background="{StaticResource BackgroundBrush}"
                            DataContext="{Binding Main,Source={StaticResource Locator}}"
                            d:DesignHeight="800" 
                            d:DesignWidth="1400">
-    <Grid>
-        
-    </Grid>
+    <userControl:CreateProjectCtl/>
 </controls:WindowBorderless>
