--- a/HandyKeras/MainWindow.xaml
+++ b/HandyKeras/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<controls:WindowBorderless x:Class="HandyKeras.MainWindow"
+﻿<controls:Window x:Class="HandyKeras.MainWindow"
                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,7 +10,7 @@
                            BorderBrush="#262e2f"
                            NonClientAreaBackground="#262e2f"
                            OtherButtonHoverBackground="#888580"
-                           Style="{StaticResource CustomWindowStyle}"
+                           Style="{StaticResource WindowWin10}"
                            WindowState="Maximized"
                            Title="MainWindow" 
                            ResizeMode="CanResizeWithGrip"
@@ -20,4 +20,4 @@
                            d:DesignHeight="800" 
                            d:DesignWidth="1400">
     <userControl:MapCtl/>
-</controls:WindowBorderless>
+</controls:Window>
