--- a/HandyKeras/Window/EnvInstallWindow.xaml
+++ b/HandyKeras/Window/EnvInstallWindow.xaml
@@ -1,4 +1,4 @@
-﻿<controls:WindowBorderless x:Class="HandyKeras.Window.EnvInstallWindow"
+﻿<controls:Window x:Class="HandyKeras.Window.EnvInstallWindow"
                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -17,11 +17,11 @@
                            ShowTitle="True"
                            OtherButtonHoverBackground="#888580"
                            DataContext="{Binding EnvInstall,Source={StaticResource Locator}}"
-                           Style="{StaticResource CustomWindowStyle}">
+                           Style="{StaticResource WindowWin10}">
     <Grid>
         <Image Width="200" VerticalAlignment="Top" Margin="0,64,0,0" Source="/HandyKeras;component/Resources/Img/keras.png"/>
         <Button VerticalAlignment="Bottom" Visibility="{Binding IsDownloading,Converter={StaticResource Boolean2VisibilityReConverter}}" Margin="0,0,0,64" Width="200" Content="{Binding IsInstalled,Converter={StaticResource Boolean2StrConverter},ConverterParameter={x:Static langs:Lang.EnvStatusStr}}" Command="{Binding InstallCmd}"/>
         <controls:LoadingCircle Visibility="{Binding IsDownloading,Converter={StaticResource Boolean2VisibilityConverter}}" VerticalAlignment="Bottom" Margin="0,0,0,100" IsRunning="{Binding IsDownloading}"/>
         <TextBlock Visibility="{Binding IsDownloading,Converter={StaticResource Boolean2VisibilityConverter}}" Text="{x:Static langs:Lang.KerasDownloadWaitOn}" Style="{StaticResource TextBlockDefault}" VerticalAlignment="Bottom" Margin="0,0,0,72"/>
     </Grid>
-</controls:WindowBorderless>
+</controls:Window>
