--- a/HandyKeras/Resources/Themes/Basic/Converters.xaml
+++ b/HandyKeras/Resources/Themes/Basic/Converters.xaml
@@ -1,4 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:converter="clr-namespace:HandyKeras.Tools.Converter">
+
+    <converter:StringSubstringConverter x:Key="StringSubstringConverter"/>
+
 </ResourceDictionary>
