--- a/HandyKeras/UserControl/Basic/LayerItem.xaml
+++ b/HandyKeras/UserControl/Basic/LayerItem.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HandyKeras.UserControl.Basic.LayerItem"
+﻿<UserControl x:Class="HandyKeras.UserControl.LayerItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
