--- a/HandyKeras/UserControl/Basic/MapItem.xaml
+++ b/HandyKeras/UserControl/Basic/MapItem.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="HandyKeras.UserControl.Basic.MapItem"
+﻿<UserControl x:Class="HandyKeras.UserControl.MapItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:interactivity="clr-namespace:HandyControl.Interactivity;assembly=HandyControl"
+             xmlns:controls="clr-namespace:HandyControl.Controls;assembly=HandyControl"
              mc:Ignorable="d" 
-             Height="100" 
+             MinHeight="116" 
              x:Name="UserControlThis"
              MinWidth="120"
              RenderTransformOrigin="0.5,0.5">
@@ -13,6 +14,24 @@
         <interactivity:MouseDragElementBehavior ConstrainToParentBounds="true" Dragging="MouseDragElementBehavior_OnDragging"/>
     </interactivity:Interaction.Behaviors>
     <GroupBox Header="{Binding Title,ElementName=UserControlThis}" Background="White">
-        <UniformGrid></UniformGrid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <ToggleButton Name="ButtonNodeStop" Click="ButtonNodeStop_OnClick" VerticalAlignment="Top" Margin="0,30,0,0" Style="{StaticResource ToggleButtonCustom}">
+                <Border Width="12" Height="12" BorderThickness="1" BorderBrush="{StaticResource PrimaryBrush}" CornerRadius="6"/>
+                <controls:StatusSwitchElement.CheckedElement>
+                    <Border Width="12" Height="12" Background="{StaticResource PrimaryBrush}" CornerRadius="6"/>
+                </controls:StatusSwitchElement.CheckedElement>
+            </ToggleButton>
+            <ToggleButton Name="ButtonNodeStart" Click="ButtonNodeStart_OnClick" Grid.Column="2" VerticalAlignment="Top" Margin="0,30,0,0" Style="{StaticResource ToggleButtonCustom}">
+                <Border Width="12" Height="12" BorderThickness="1" BorderBrush="{StaticResource PrimaryBrush}" CornerRadius="6"/>
+                <controls:StatusSwitchElement.CheckedElement>
+                    <Border Width="12" Height="12" Background="{StaticResource PrimaryBrush}" CornerRadius="6"/>
+                </controls:StatusSwitchElement.CheckedElement>
+            </ToggleButton>
+        </Grid>
     </GroupBox>
 </UserControl>
